fix comments, meta tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NeedU 니쥬입니다.</title>
+    <meta
+      name="description"
+      content="사회복지분야를 위한 커리어 플랫폼. 사회복지기관 리뷰, 커뮤니티, 멘토링 서비스를 경험하세요."
+    />
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   </head>
   <body>
