--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NeedU 니쥬입니다.</title>
+    <title>사회복지 커뮤니티, NEEDU</title>
     <meta
       name="description"
-      content="사회복지분야를 위한 커리어 플랫폼. 사회복지기관 리뷰, 커뮤니티, 멘토링 서비스를 경험하세요."
+      content="전혁직 기관 리뷰, 실습리뷰, 니쥬챗, 커뮤니티까지 사회복지에 대한 모든 이야기를 나누며 더 발전해보세요"
     />
+    <meta
+      name="keywords"
+      content="사회복지, 사회복지사, 사회복지관, 요양보호사, ngo, 지역아동센터, 노인복지, 청소년 복지, 아동복지, 장애인복지, 커뮤니티, 리뷰, 전현직리뷰, 실습리뷰, 커피챗, 니쥬챗, 질문답변, 온라인, 디지털"
+    />
+    <meta property="og:title" content="사회복지 커뮤니티, NEEDU" />
+    <meta
+      property="og:description"
+      content="전혁직 기관 리뷰, 실습리뷰, 니쥬챗, 커뮤니티까지 사회복지에 대한 모든 이야기를 나누며 더 발전해보세요"
+    />
+    <meta property="og:image" content="미리보기_이미지_경로.jpg" />
+    <meta property="og:image:alt" content="Needu Image" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="ko_KR" />
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   </head>
   <body>
