--- a/index.html
+++ b/index.html
@@ -18,10 +18,32 @@
       property="og:description"
       content="전혁직 기관 리뷰, 실습리뷰, 니쥬챗, 커뮤니티까지 사회복지에 대한 모든 이야기를 나누며 더 발전해보세요"
     />
-    <meta property="og:image" content="미리보기_이미지_경로.jpg" />
+    <meta
+      property="og:image"
+      content="https://github.com/Code-KHJ/Needu/assets/124508326/ff518c60-5d82-429e-befa-370ec59e3e52"
+    />
     <meta property="og:image:alt" content="Needu Image" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="ko_KR" />
+
+    <!--   네이버 서치어드바이저 인증 -->
+    <meta
+      name="naver-site-verification"
+      content="489dd530adf48381d5828c84bccf0503988cf7d1"
+    />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-G5XZB713D0"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-G5XZB713D0");
+    </script>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   </head>
   <body>
