--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <meta
       property="og:image"
-      content="https://github.com/Code-KHJ/Needu/assets/124508326/ff518c60-5d82-429e-befa-370ec59e3e52"
+      content="https://raw.githubusercontent.com/Code-KHJ/needu-frontend-react/refs/heads/main/src/assets/images/img_og.jpeg"
     />
     <meta property="og:image:alt" content="Needu Image" />
     <meta property="og:type" content="website" />
